--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,27 @@
-<nav>
-  <div class="nav-wrapper black">
-    <a href="/" class="brand-logo center">FS Item Manager</a>
+<div class="leftMainPanel">
+  <div class="startOmReikiElement">
+  <div class="startOmReikiButton button">Set Om Reiki</div>
+  <div class="meditationOptions" style="display: none;">
+  <div class="affirmationsInOptions"></div>
+  <div class="valueSetters">
+  <div class="karaokeCounter"><input class="button" type="text" value="16"> <span>Affirmations number</span></div>
+  <div class="karaokeTimer"><input class="affValue button" type="text" value="60"> <span>(ms) Meditation tempo</span></div>
   </div>
-</nav>
+  <p>slow<input class="affRange" type="range" min="1" max="120" value="60" style="
+      width: 100px;
+      display: inline;
+      vertical-align: middle;
+      margin: 0 15px;
+  ">fast</p>
+  <div class="startOmReiki button">Start</div>
+  </div>
+  </div>
+  <div class="mastersElement menuElement"><img src="../assets/images/menu/invocationd.gif" alt="masters" /></div>
+  <div class="menuElement"><img src="../assets/images/menu/doubleOmegaAffirmation_200.gif" alt="affirmation" /></div>
+  <div class="menuElement"><img src="../assets/images/menu/SymbolsMeditation_300.png" alt="meditation" /></div>
+  <div class="menuElement"><img src="../assets/images/menu/grail2dorbit_300.gif" alt="prayer" /></div>
+  <div class="menuElement"><img src="../assets/images/menu/omreikisongtantrabeta.png" alt="song" /></div>
+  <div class="quantecPlayButton menuButton">Start Quantec</div>
+  <div class="quantecFrequency"><input class="button" type="text" value="790"><span class="button">ms</span></div>
+  
+  </div>
